[package]
name = "bjail"
version = "0.1.4"
edition = "2024"
description = "A minimal bubblewrap-based sandbox CLI for Linux"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jingfelix/bjail"
keywords = ["sandbox", "bubblewrap", "cli", "linux"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
seccompiler = "0.5.0"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
